--- a/src/main/resources/de/metacoder/blog/components/Layout.tml
+++ b/src/main/resources/de/metacoder/blog/components/Layout.tml
@@ -2,78 +2,81 @@
     <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd"
       xmlns:p="tapestry:parameter">
+<!--
+
+	Nonzero1.0 by nodethirtythree design
+	http://www.nodethirtythree.com
+	missing in a maze
+
+-->
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
         <title>${title}</title>
     </head>
     <body>
         <!-- start header -->
-        <div class="header">
-            <div class="logo">
-                <h1>
-                    <t:pagelink page="index">de.metacoder:blog</t:pagelink>
-                    &nbsp;
-                    version ${appVersion}
-                </h1>
-            </div>
-            <div class="menu">
-                <ul>
-                    <li t:type="loop" source="pageNames" value="pageName" class="prop:classForPageName">
-                        <t:pagelink page="prop:pageName">${pageName}</t:pagelink>
-                    </li>
-                </ul>
-            </div>
+		<div id="header">
+			<div id="header_inner" class="fixed">
+	            <div id="logo">
+					<h1><span><t:pagelink page="index">de.metacoder:blog</t:pagelink></span></h1>
+					<h2>version ${appVersion}</h2>
+	            </div>
+	            <div id="menu">
+	                <ul>
+	                    <li t:type="loop" source="pageNames" value="pageName" class="prop:classForPageName">
+	                        <t:pagelink page="prop:pageName">${pageName}</t:pagelink>
+	                    </li>
+	                </ul>
+	            </div>
+	        </div>
         </div>
         <!-- end header -->
         <!-- start page -->
-        <div class="page">
-            <!-- start sidebar -->
-            <div class="sidebar">
-                <ul>
-                    <li class="search" style="background: none;">
-                    </li>
-                    <li>
-                        <t:alerts/>
-                    </li>
-                    <li t:type="if" test="sidebar">
-                        <h2>${sidebarTitle}</h2>
+<div id="main">
 
-                        <div class="sidebar-content">
-                            <t:delegate to="sidebar"/>
-                        </div>
-                    </li>
-                    
-                    <li type="if" test="sidebar == null">
-                    	<h2>Default sidebar title!</h2>
-                    </li>
-                </ul>
-            </div>
-            <!-- end sidebar -->
+	<div id="main_inner" class="fixed">
             <!-- start content -->
-            <div class="content">
-                <div class="post">
+            <div id="primaryContent_2columns">
+
+			<div id="columnA_2columns">
                     <div class="title">
-                        <h2>${title}</h2>
+                        <h3>${title}</h3>
                     </div>
                     <div class="entry">
                         <t:body/>
                     </div>
-                </div>
+            </div>
             </div>
             <!-- end content -->
-            <br style="clear: both;"/>
+            <!-- start sidebar -->
+            	<div id="secondaryContent_2columns">
+		
+			<div id="columnC_2columns">
+                        <h4><span>Framework</span> version</h4>
+
+                        <div class="sidebar-content">
+        <p>
+            You are running Tapestry version <strong>${tapestryVersion}</strong>.
+        </p>
+
+                        </div>
+                        
+                        <h4><span>Schmennhart</span> Luhl </h4>
+                        <div class="sidebar-content">
+                        	Gnihihihi
+                        </div>
+            </div></div>
+            <!-- end sidebar -->
+		<br class="clear" />
+        </div>
         </div>
         <!-- end page -->
         <!-- start footer -->
-        <div class="footer">
+<div id="footer" class="fixed">
             <p class="legal">
-                &copy;2012 de.metacoder. All Rights Reserved.
+                &copy;2012 metacoder.de
                 &nbsp;&nbsp;&bull;&nbsp;&nbsp;
-                Design by
-                <a href="http://www.freecsstemplates.org/">Free CSS Templates</a>
-                &nbsp;&nbsp;&bull;&nbsp;&nbsp;
-                Icons by
-                <a href="http://famfamfam.com/">FAMFAMFAM</a>.
+                Design by <a href="http://www.nodethirtythree.com/">NodeThirtyThree Design</a>.
             </p>
         </div>
         <!-- end footer -->
