--- a/src/main/resources/de/metacoder/blog/pages/Index.tml
+++ b/src/main/resources/de/metacoder/blog/pages/Index.tml
@@ -1,5 +1,4 @@
 <html t:type="layout" title="blog Index"
-      t:sidebarTitle="Framework Version"
       xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd"
       xmlns:p="tapestry:parameter">
         <!-- Most of the page content, including <head>, <body>, etc. tags, comes from Layout.tml -->
@@ -7,44 +6,14 @@
     <p>${message:greeting}</p>
 
 
-    <div t:type="loop" source="blogEntries" value="blogEntry" class="blogEntry" style="border: 1px solid black">
-        <h2>${blogEntry.title} - ${blogEntry.creationDate} (${blogEntry.id})</h2>
-        <p>${blogEntry.content}</p>
-        <t:pagelink t:id="edit" page="editEntry" context="blogEntry.id">Editieren</t:pagelink> - 
-        <t:actionlink t:id="delete" context="blogEntry.id">L&ouml;schen</t:actionlink>
+    <div t:type="loop" source="blogEntries" value="blogEntry" class="post">
+        <h3>${blogEntry.title} (${blogEntry.id})</h3>
+        <ul class="post_info">
+						<li class="date">Posted by <a href="#">${blogEntry.authorName}</a> on ${blogEntry.creationDate}</li>
+						<li class="comments"><a href="#">comments not available</a></li>
+					</ul>		
+        <p><t:outputRaw value="blogEntry.content" /></p>
+        <p><t:pagelink t:id="edit" page="editEntry" context="blogEntry.id">Editieren</t:pagelink> - 
+        <t:actionlink t:id="delete" context="blogEntry.id">L&ouml;schen</t:actionlink></p>
     </div>
-
-    <p>The current time is: <strong>${currentTime}</strong></p>
-
-    <!-- A Zone is a component that can be updated in place, triggered by other components. -->
-    <t:zone t:id="zone">
-        <p>
-            You have clicked the link <strong>${clickCount}</strong> times.
-        </p>
-
-        <p>
-            [
-            <t:actionlink t:id="increment">increment</t:actionlink>
-            ]
-            &nbsp;
-            [
-            <t:actionlink t:id="incrementAjax" zone="^">increment (via Ajax)</t:actionlink>
-            ]
-        </p>
-
-    </t:zone>
-
-    <p:sidebar>
-        <p>
-            You are running Tapestry version <strong>${tapestryVersion}</strong>.
-        </p>
-
-
-        <p>
-            [
-            <t:pagelink page="Index">refresh page</t:pagelink>
-            ]
-        </p>
-    </p:sidebar>
-
 </html>
