paginator eingefuegt fuer blogposts.

--- a/src/main/resources/de/metacoder/blog/components/Layout.tml
+++ b/src/main/resources/de/metacoder/blog/components/Layout.tml
@@ -61,7 +61,7 @@
 
                         </div>
                         
-                        <h4><span>Schmennhart</span> Luhl </h4>
+                        <h4><span>Zorsti</span> Bellmer </h4>
                         <div class="sidebar-content">
                         	Gnihihihi
                         </div>
