--- a/src/main/resources/de/metacoder/blog/pages/Index.tml
+++ b/src/main/resources/de/metacoder/blog/pages/Index.tml
@@ -14,8 +14,12 @@
 					</ul>		
         <p><t:outputRaw value="blogEntry.content" /></p>
         <p t:type="if" test="blogEntry.lastUpdateDate">Letzte aktualisierung: ${blogEntry.lastUpdateDate}</p>
-        <p><t:pagelink t:id="edit" page="editEntry" context="blogEntry.id">Editieren</t:pagelink> - 
-        <t:actionlink t:id="delete" context="blogEntry.id">L&ouml;schen</t:actionlink></p>
+       	<t:security.hasRole role="admin">
+	        <p>
+	        	<t:pagelink t:id="edit" page="editEntry" context="blogEntry.id">Editieren</t:pagelink> - 
+	        	<t:actionlink t:id="delete" context="blogEntry.id">L&ouml;schen</t:actionlink>
+	        </p>
+        </t:security.hasRole>
     </div>
 
     <p id="blogPostPaginator">
