--- a/src/main/resources/de/metacoder/blog/pages/Unauthorized.tml
+++ b/src/main/resources/de/metacoder/blog/pages/Unauthorized.tml
@@ -1,7 +1,7 @@
-<html t:type="layout" title="About blog"
+<html t:type="layout" title="Unauthorized"
       xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd"
       xmlns:p="tapestry:parameter">
 
-    <p>About blog application ...</p>
+    <p>Sie besitzen nicht die nicht die noetigen Berechtigungen um diese Aktion auszufuehren.</p>
 
 </html>
