--- a/src/main/resources/de/metacoder/blog/components/Layout.tml
+++ b/src/main/resources/de/metacoder/blog/components/Layout.tml
@@ -1,103 +1,81 @@
 <!DOCTYPE html>
-    <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd"
-      xmlns:p="tapestry:parameter">
-<!--
-
-	Nonzero1.0 by nodethirtythree design
-	http://www.nodethirtythree.com
-	missing in a maze
-
--->
-    <head>
-        <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-        <title>${title}</title>
-    </head>
-    <body>
-        <!-- start header -->
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd"
+	xmlns:p="tapestry:parameter">
+	<!--
+		Nonzero1.0 by nodethirtythree design
+		http://www.nodethirtythree.com
+		missing in a maze
+	-->
+	<head>
+		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+		<title>${title}</title>
+	</head>
+	<body>
+		<!-- start header -->
 		<div id="header">
 			<div id="header_inner" class="fixed">
-	            <div id="logo">
+				<div id="logo">
 					<h1><span><t:pagelink page="index">de.metacoder:blog</t:pagelink></span></h1>
 					<h2>version ${appVersion}</h2>
-	            </div>
-	            <div id="menu">
-	                <ul>
-	                    <li t:type="loop" source="pageNames" value="pageName" class="prop:classForPageName">
-	                        <t:pagelink page="prop:pageName">${pageName}</t:pagelink>
-	                    </li>
-	                </ul>
-	            </div>
-	        </div>
-        </div>
-        <!-- end header -->
-        <!-- start page -->
-<div id="main">
-
-	<div id="main_inner" class="fixed">
-            <!-- start content -->
-            <div id="primaryContent_2columns">
-
-			<div id="columnA_2columns">
-                    <div class="title">
-                        <h3>${title}</h3>
-                    </div>
-                    <div class="entry">
-                        <t:body/>
-                    </div>
-            </div>
-            </div>
-            <!-- end content -->
-            <!-- start sidebar -->
-			<div id="secondaryContent_2columns">
-			
-				<div id="columnC_2columns">
-					<!--  sidebar content -->
-					<t:if test="sidebar">
-						<t:delegate to="sidebar" />
-						<p:else> <!-- show default sidebar -->
-							<h4>
-								<span>Framework</span>
-								version
-							</h4>
-					
-							<div class="sidebar-content">
-								<p>
-									You are running Tapestry version
-									<strong>${tapestryVersion}</strong>
-									.
-								</p>
-					
-							</div>
-					
-							<h4>
-								<span>Sample</span> Foo
-							</h4>
-							<div class="sidebar-content">
-								<p>
-								abc
-								</p>
-							</div>
-						</p:else>
-					</t:if>
-							
-					<!-- end sidebar content -->
+				</div>
+				<div id="menu">
+					<ul>
+						<li t:type="loop" source="pageNames" value="pageName" class="prop:classForPageName">
+							<t:pagelink page="prop:pageName">${pageName}</t:pagelink>
+						</li>
+					</ul>
 				</div>
 			</div>
-            <!-- end sidebar -->
-		<br class="clear" />
-        </div>
-        </div>
-        <!-- end page -->
-        <!-- start footer -->
-<div id="footer" class="fixed">
-            <p class="legal">
+		</div>
+		<!-- end header -->
+		<!-- start page -->
+		<div id="main">
+			<div id="main_inner" class="fixed">
+				<!-- start content -->
+				<div id="primaryContent">
+					<div id="mainContent">
+						<div class="title">
+							<h3>${title}</h3>
+						</div>
+						<div class="entry">
+							<t:body />
+						</div>
+					</div>
+				</div>
+				<!-- end content -->
+				<!-- start sidebar -->
+				<div id="secondaryContent">
+					<div id="sidebar">
+						<t:if test="sidebar">
+							<t:delegate to="sidebar" />
+							<p:else> <!-- show default sidebar -->
+								<h4><span>Framework</span> version</h4>
+
+								<div class="sidebar-content">
+									<p>You are running Tapestry version <strong>${tapestryVersion}</strong>.</p>
+								</div>
+
+								<h4><span>Sample</span> Foo</h4>
+								<div class="sidebar-content">
+									<p>abc</p>
+								</div>
+							</p:else>
+						</t:if>
+					</div>
+				</div>
+				<!-- end sidebar -->
+				<br class="clear" />
+			</div>
+		</div>
+		<!-- end page -->
+		<!-- start footer -->
+		<div id="footer" class="fixed">
+			<p class="legal">
                 &copy;2012 metacoder.de
                 &nbsp;&nbsp;&bull;&nbsp;&nbsp;
-                Design by <a href="http://www.nodethirtythree.com/">NodeThirtyThree Design</a>.
-            </p>
-        </div>
-        <!-- end footer -->
-    </body>
-    
+				Design by <a href="http://www.nodethirtythree.com/">NodeThirtyThree Design</a> .
+			</p>
+		</div>
+		<!-- end footer -->
+	</body>
 </html>
