--- a/src/main/resources/de/metacoder/blog/pages/Login.tml
+++ b/src/main/resources/de/metacoder/blog/pages/Login.tml
@@ -1,16 +1,15 @@
 <html t:type="layout" title="Login"
-      xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd"
-      xmlns:p="tapestry:parameter">
+	xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd" xmlns:p="tapestry:parameter">
 
-    <p>Login-Seite...</p>
-    	<t:security.user>
-  			Hello, ${username}
-  			<t:security.loginlink />
-		</t:security.user>
-		<t:security.guest>
-			<t:security.loginform />
-		</t:security.guest>
-		
+	<p>Login-Seite...</p>
+	<t:security.user>
+		Hello, ${username}
+		<t:security.loginlink />
+	</t:security.user>
+	<t:security.guest>
+		<t:security.loginform />
+	</t:security.guest>
+
 	<p:sidebar>
 	</p:sidebar>
 </html>
