--- a/src/main/webapp/css/nonzero.css
+++ b/src/main/webapp/css/nonzero.css
@@ -53,11 +53,6 @@ br.clear {
 	clear: both;
 }
 
-img {
-	padding: 3px;
-	border: solid 1px #e1e1e1;
-}
-
 img.floatTL {
 	float: left;
 	margin-right: 1.5em;
@@ -90,7 +85,7 @@ p {
 #header {
 	width: 100%;
 	height: 122px;
-	background: #440000 url('../images/n1.gif') repeat-x;
+	background: #FFF url('../images/n1.gif') repeat-x;
 }
 
 #header_inner {
