--- a/src/main/resources/de/metacoder/blog/pages/Admin.tml
+++ b/src/main/resources/de/metacoder/blog/pages/Admin.tml
@@ -12,24 +12,19 @@
 
 		<div class="sidebar-content">
 			<ul>
-				<li><t:eventLink event="showEditEntryPanel" zone="adminModuleZone">Add Entry</t:eventLink></li>			
-				<li><t:eventlink event="showloginForm" zone="adminModuleZone">Login Form</t:eventlink></li>
-				<li><t:eventLink event="showLoginLink" zone="adminModuleZone">Login / Out Link</t:eventLink></li>
+				<li><t:eventLink event="showUserManagementPanel" zone="adminModuleZone">Usermanagement</t:eventLink></li>
+				<li><t:eventLink event="showEditEntryPanel" zone="adminModuleZone">Add Entry</t:eventLink></li>
 			</ul>
 		</div>
 		<hr/>
 		<t:security.loginLink />
 	</p:sidebar>
 
-	<t:block t:id="loginFormBlock">
-		<t:security.loginForm />
-	</t:block>
-
-	<t:block t:id="loginLinkBlock">
-		<t:security.loginLink />
-	</t:block>
-
 	<t:block t:id="editEntryBlock">
-			<div t:type="editBlogEntryPanel" />
+		<div t:type="editBlogEntryPanel" />
+	</t:block>
+
+	<t:block t:id="userManagementBlock">
+		<div t:type="userManagementPanel" />
 	</t:block>
 </html>
