--- a/src/main/webapp/css/blog.css
+++ b/src/main/webapp/css/blog.css
@@ -24,3 +24,12 @@ hr {
 	border: 0;
 	border-top: 1px dotted #E1E1E1;
 }
+
+table {
+	border: 1px solid grey;
+	border-collapse: collapse;
+}
+
+td, th {
+	padding:5px;
+}
