--- a/src/main/resources/de/metacoder/blog/pages/Index.tml
+++ b/src/main/resources/de/metacoder/blog/pages/Index.tml
@@ -14,13 +14,15 @@
 			<t:outputRaw value="blogEntry.content" />
 		</p>
 		<p t:type="if" test="blogEntry.lastUpdateDate">Letzte aktualisierung: ${blogEntry.lastUpdateDate}</p>
-		<t:security.hasRole role="admin">
-			<p>
-				<t:pagelink t:id="edit" page="editEntry" context="blogEntry.id">Editieren</t:pagelink>
-				-
-				<t:actionlink t:id="delete" context="blogEntry.id">Löschen</t:actionlink>
-			</p>
-		</t:security.hasRole>
+		<t:security.authenticated>
+			<t:security.hasRole role="admin">
+				<p>
+					<t:pagelink t:id="edit" page="editEntry" context="blogEntry.id">Editieren</t:pagelink>
+					-
+					<t:actionlink t:id="delete" context="blogEntry.id">Löschen</t:actionlink>
+				</p>
+			</t:security.hasRole>
+		</t:security.authenticated>
 	</div>
 
 	<p id="blogPostPaginator">
