--- a/src/main/resources/de/metacoder/blog/pages/Login.tml
+++ b/src/main/resources/de/metacoder/blog/pages/Login.tml
@@ -2,13 +2,13 @@
 	xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd" xmlns:p="tapestry:parameter">
 
 	<p>Login-Seite...</p>
-	<t:security.user>
+	<t:security.authenticated>
 		Hello, ${username}
 		<t:security.loginlink />
-	</t:security.user>
-	<t:security.guest>
+	</t:security.authenticated>
+	<t:security.notAuthenticated>
 		<t:security.loginform />
-	</t:security.guest>
+	</t:security.notAuthenticated>
 
 	<p:sidebar>
 	</p:sidebar>
