--- a/src/main/resources/de/metacoder/blog/pages/About.tml
+++ b/src/main/resources/de/metacoder/blog/pages/About.tml
@@ -1,7 +1,7 @@
-<html t:type="layout" title="About blog"
+<t:layout title="About blog"
       xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd"
       xmlns:p="tapestry:parameter">
 
     <p>About blog application ...</p>
 
-</html>
+</t:layout>
