--- a/src/main/resources/de/metacoder/blog/pages/Index.tml
+++ b/src/main/resources/de/metacoder/blog/pages/Index.tml
@@ -1,8 +1,6 @@
-<html t:type="layout" title="blog Index"
+<t:layout title="blog Index"
 	xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd" xmlns:p="tapestry:parameter">
 	<!-- Most of the page content, including <head>, <body>, etc. tags, comes from Layout.tml -->
-
-	<p>${message:greeting}</p>
 
 	<div t:type="loop" source="blogEntries" value="blogEntry" class="post">
 		<h3>${blogEntry.title}</h3>
@@ -17,7 +15,7 @@
 		<t:security.authenticated>
 			<t:security.hasRole role="admin">
 				<p>
-					<t:pagelink t:id="edit" page="editEntry" context="blogEntry.id">Editieren</t:pagelink>
+					<t:pagelink t:id="edit" page="admin/entries/editEntry" context="blogEntry.id">Editieren</t:pagelink>
 					-
 					<t:actionlink t:id="delete" context="blogEntry.id">Löschen</t:actionlink>
 				</p>
@@ -46,4 +44,4 @@
 	<script type="text/javascript">
 		SyntaxHighlighter.all()
 	</script>
-</html>
+</t:layout>
