--- a/src/main/resources/de/metacoder/blog/pages/Login.tml
+++ b/src/main/resources/de/metacoder/blog/pages/Login.tml
@@ -1,4 +1,4 @@
-<html t:type="layout" title="Login"
+<t:layout title="Login"
 	xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd" xmlns:p="tapestry:parameter">
 
 	<p>Login-Seite...</p>
@@ -12,4 +12,4 @@
 
 	<p:sidebar>
 	</p:sidebar>
-</html>
+</t:layout>
