--- a/src/main/resources/de/metacoder/blog/pages/admin/entries/NewEntry.tml
+++ b/src/main/resources/de/metacoder/blog/pages/admin/entries/NewEntry.tml
@@ -1,11 +1,8 @@
-<t:layout title="Edit Entry"
-	xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd" xmlns:p="tapestry:parameter">
-
-	<p>Edit entry ....</p>
+<t:adminlayout title="Neuer Eintrag" xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd" xmlns:p="tapestry:parameter">
 	<t:beanEditForm object="blogEntry">
 		<p:content>
 			<t:label for="content" />
 			<t:textarea t:id="content" t:value="blogEntry.content" style="width: 400px; height: 300px;"/>
 		</p:content>
 	</t:beanEditForm>
-</t:layout>
+</t:adminlayout>
