--- a/src/main/resources/de/metacoder/blog/pages/admin/users/EditUser.tml
+++ b/src/main/resources/de/metacoder/blog/pages/admin/users/EditUser.tml
@@ -1,4 +1,14 @@
 <t:adminlayout title="Benutzer editieren" xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd" xmlns:p="tapestry:parameter">
-	<t:beanEditForm object="user">
+	
+	<!-- TODO fix ugly css / html -->
+	<t:form t:id="passwordChangeForm" style="margin:20px 0 20px 0; padding:5px; border: 1px dotted grey;">
+		<t:label for="newPasswordField" style="margin-right:5px;">Neues Passwort:</t:label> 
+		<t:passwordfield value="newPassword" t:id="newPasswordField" /> 
+		<br />
+		<input type="submit" value="Passwort ändern" />
+	</t:form>
+	
+	<hr />
+	<t:beanEditForm object="user" t:id="beanEditForm">
 	</t:beanEditForm>
 </t:adminlayout>
