--- a/src/main/resources/de/metacoder/blog/components/Layout.tml
+++ b/src/main/resources/de/metacoder/blog/components/Layout.tml
@@ -78,7 +78,7 @@
 			<p class="legal">
                 &copy;2012 metacoder.de
                 &nbsp;&nbsp;&bull;&nbsp;&nbsp;
-				Design by <a href="http://www.nodethirtythree.com/">NodeThirtyThree Design</a> .
+				Design by <a href="http://www.nodethirtythree.com/">NodeThirtyThree Design</a>
 			</p>
 		</div>
 		<!-- end footer -->
