Syntaxhighlighter auf Single-Post Ansicht eingebaut

--- a/src/main/resources/de/metacoder/blog/pages/Entry.tml
+++ b/src/main/resources/de/metacoder/blog/pages/Entry.tml
@@ -4,4 +4,8 @@
 
 	<t:blogEntryDisplay entry="blogEntry" displayTitle="false" />
 
+	<!-- TODO jquery document ready -->
+	<script type="text/javascript">
+		SyntaxHighlighter.all()
+	</script>
 </t:layout>
