--- a/src/main/resources/de/metacoder/blog/components/BlogEntryDisplay.tml
+++ b/src/main/resources/de/metacoder/blog/components/BlogEntryDisplay.tml
@@ -1,11 +1,18 @@
-<div xmlns="http://www.w3.org/1999/xhtml" xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd" class="post">
+<div xmlns="http://www.w3.org/1999/xhtml" xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd" xmlns:p="tapestry:parameter" class="post">
 
 	<t:if test="displayTitle">
 		<h3><t:pageLink page="entry" context="linkContext">${entry.title}</t:pageLink></h3>
 	</t:if>
 	<ul class="post_info">
-		<li class="date">Posted by <span t:type="loop" source="entry.authors" value="author"><t:pageLink page="profile" context="author.name">${author.name}</t:pageLink></span> on ${entry.creationDate}</li>
-		<li class="comments"><a href="#">comments not available</a></li>
+		<li class="date">Von: <span t:type="loop" source="entry.authors" value="author"><t:pageLink page="profile" context="author.name">${author.name}</t:pageLink></span> am ${entry.creationDate}</li>
+		<li class="comments">
+			<t:if test="displayTitle">
+					<t:pageLink page="entry" context="linkContext" anchor="comments">Kommentare (${entry.getComments().size()})</t:pageLink>
+				<p:else>
+					<a href="#comments">Kommentare (${entry.getComments().size()})</a>
+				</p:else>
+			</t:if>
+		</li>
 	</ul>
 	<p>
 		<t:outputRaw value="entry.content" />
