newComment aus PostCommentForm rausgezogen

--- a/src/main/resources/de/metacoder/blog/pages/Entry.tml
+++ b/src/main/resources/de/metacoder/blog/pages/Entry.tml
@@ -11,5 +11,5 @@
 		<p>${currentComment.content}</p>
 	</t:loop>
 	
-	<t:postCommentForm entry="blogEntry" />
+	<t:postCommentForm entry="blogEntry" newComment="newComment" />
 </t:layout>
