--- a/src/main/resources/de/metacoder/blog/pages/rss/RSS2.tml
+++ b/src/main/resources/de/metacoder/blog/pages/rss/RSS2.tml
@@ -21,7 +21,7 @@
       <link>http://www.metacoder.de/entry/feed-7</link>
       <author>${authorNames}</author>
       <guid>${currentEntry.id}</guid>
-      <pubDate>${currentEntry.creationDate}</pubDate>
+      <pubDate>${creationDateASRFC822}</pubDate>
     </item>
 	</t:loop>
  
