--- a/src/main/resources/de/metacoder/blog/pages/rss/RSS2.tml
+++ b/src/main/resources/de/metacoder/blog/pages/rss/RSS2.tml
@@ -12,7 +12,7 @@
 	<item>
       <title>${currentEntry.title}</title>
       <link>http://www.metacoder.de/entry/feed-${currentEntry.id}</link>
-      <author>${authorNames}</author>
+      <!--<author>${authorNames}</author>-->
       <guid>http://www.metacoder.de/entry/feed-${currentEntry.id}</guid>
       <pubDate>${creationDateASRFC822}</pubDate>
     </item>
