--- a/src/main/resources/de/metacoder/blog/pages/admin/entries/Index.tml
+++ b/src/main/resources/de/metacoder/blog/pages/admin/entries/Index.tml
@@ -7,7 +7,7 @@
 			<th>Erstellungsdatum</th>
 			<th colspan="2" />
 		</tr>
-		<tr t:type="loop" source="blogEntryRepository.allOrderedByCreationDate" value="entry">
+		<tr t:type="loop" source="blogEntryService.allOrderedByCreationDate" value="entry">
 			<td>${entry.id}</td>
 			<td>${entry.title}</td>
 			<td>${entry.creationDate}</td>
