--- a/src/main/resources/de/metacoder/blog/pages/admin/entries/Index.tml
+++ b/src/main/resources/de/metacoder/blog/pages/admin/entries/Index.tml
@@ -1,18 +1,30 @@
 <t:adminlayout title="Eintragsübersicht" xmlns="http://www.w3.org/1999/xhtml" xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd" xmlns:p="tapestry:parameter">
 
-	<table border="1">
-		<tr>
-			<th>ID</th>
-			<th>Titel</th>
-			<th>Erstellungsdatum</th>
-			<th colspan="2" />
-		</tr>
-		<tr t:type="loop" source="blogEntryService.allOrderedByCreationDate" value="entry">
-			<td>${entry.id}</td>
-			<td>${entry.title}</td>
-			<td>${entry.creationDate}</td>
-			<td><t:pagelink page="admin/entries/editentry" context="entry.id">Eintrag editieren</t:pagelink></td>			
-			<td><t:actionlink t:id="delete" context="entry.id">Löschen</t:actionlink></td>
-		</tr>
-	</table>
+    <div ng-controller="OverviewCtrl">
+
+    {{greeting}}
+
+    Einträge: {{numrows}}
+
+    <table class="table table-striped table-bordered">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Titel</th>
+                <th>Erstellungsdatum</th>
+                <th colspan="2" />
+            </tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat="entry in entryList">
+                <td>{{entry.id}}</td>
+                <td>{{entry.title}}</td>
+                <td>{{entry.creationDate | date:'medium'}}</td>
+                <td><a href="/admin/entries/editentry/{{entry.id}}">Bearbeiten</a></td>
+                <td><a href="/admin/entries/index.delete/{{entry.id}}">Löschen</a></td>
+            </tr>
+        </tbody>
+    </table>
+
+    </div>
 </t:adminlayout>
