--- a/src/main/resources/de/metacoder/blog/pages/Profile.tml
+++ b/src/main/resources/de/metacoder/blog/pages/Profile.tml
@@ -1,7 +1,7 @@
-<t:layout title="${user.name}"
+<t:layout title="${userBO.name}"
       xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd"
       xmlns:p="tapestry:parameter">
 
-    <p>${user.name}</p>
+    <p>${userBO.name}</p>
 
 </t:layout>
