--- a/src/main/resources/de/metacoder/blog/components/AdminLayout.tml
+++ b/src/main/resources/de/metacoder/blog/components/AdminLayout.tml
@@ -2,32 +2,7 @@
 	xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd" xmlns:p="tapestry:parameter">
 
 	<p:sidebar>
-		<h4>
-			<span>Einträge</span> Menü
-		</h4>
 
-		<div class="sidebar-content">
-			<ul>
-				<li>
-					<t:pagelink page="admin/entries">Übersicht</t:pagelink>
-				</li>
-				<li>
-					<t:pagelink page="admin/entries/newentry">Neu</t:pagelink>
-				</li>
-			</ul>
-		</div>		
-		
-		<h4><span>Benutzer</span> Menü</h4>	
-		<div class="sidebar-content">
-			<ul>
-				<li>
-					<t:pagelink page="admin/users">Übersicht</t:pagelink>
-				</li>
-				<li>
-					<t:pagelink page="admin/users/newuser">Neu</t:pagelink>
-				</li>
-			</ul>
-		</div>		
 	</p:sidebar>
 
 		<t:if test="title">
@@ -35,7 +10,7 @@
 			${title}
 			</h4>
 		</t:if>
-    <div ng-app="">
+    <div ng-app="metacoderAdmin">
 	    <t:body />
     </div>
 
